6-Authorise_the_workloads/solution/authorization-policy-on-workload.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: jwt-require-valid-token
  namespace: radoscis
spec:
  selector:
    matchLabels:
      app: httpbin      
  action: DENY
  rules:
  - from:
    - source:
        notRequestPrincipals: ["*"]
    to:
    - operation:
        paths: ["/headers"]
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-tcp-port
  namespace: radoscis
spec:
  selector:
    matchLabels:
      app: tcp-echo      
  action: ALLOW
  rules:
  - to:
    - operation:
        ports: ["9000"]
